some changes again

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="main-box">
             <div class="logo">
                 <a href="https://bashcony.ru/index.html">
-                    <img src="res/logo-dark.svg" alt="" title="" class="logo-light" width="110" height="100">
-                    <img src="res/logo-white.svg" alt="" title="" class="logo-dark" width="110" height="100">
+                    <img src="res/logo-dark.svg" alt="" title="" class="logo-light" style="width:auto;height:55px;margin-left:10px">
+                    <img src="res/logo-white.svg" alt="" title="" class="logo-dark" style="width:auto;height:55px;margin-left:10px">
                 </a>
             </div>
         </div>
@@ -166,7 +166,7 @@
                     <!-- Image Box / Right side Image -->
                     <div class="image-column">
                         <div class="background-shape" style="background-image: url(images/icons/shape.jpg);"></div>
-                        <div class="main-image" style="background-image: url();"></div>
+                        <div class="main-image" style="background-image: url(images/icons/shape.jpg);"></div>
                     </div>
                 </div>
             </div>
